# feather-gb

./: .babelrc  .editorconfig  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .prettierrc.js  238.7e0e8318eda642fc5ce3.js  238.7e0e8318eda642fc5ce3.js.br  254.1aa60aa644e4d5fba871.js  254.1aa60aa644e4d5fba871.js.br  254.1f05096be82941297d9c.js  254.1f05096be82941297d9c.js.br  254.201aa97de425517958a4.js  254.201aa97de425517958a4.js.br  254.26b9177e4941b184d264.js  254.26b9177e4941b184d264.js.br  254.2f6eb0872d82a62a3f66.js  254.2f6eb0872d82a62a3f66.js.br  254.33a9e3ba8fce64c221ec.js  254.33a9e3ba8fce64c221ec.js.br  254.42d3d8f40bbb40ff0d37.js  254.42d3d8f40bbb40ff0d37.js.br  254.4c7fd918d81a007aed7c.js  254.4c7fd918d81a007aed7c.js.br  254.5731e381c57964e4f8f5.js  254.5731e381c57964e4f8f5.js.br  254.60c64ef87aac3fea344f.js  254.60c64ef87aac3fea344f.js.br  254.7622a026da95be07ef0f.js  254.7622a026da95be07ef0f.js.br  254.7766c174b8a4dfb57d15.js  254.7766c174b8a4dfb57d15.js.br  254.7be9c763488314549e96.js  254.7be9c763488314549e96.js.br  254.7e87aa2403d26977b53d.js  254.7e87aa2403d26977b53d.js.br  254.84abf537f316fcd4bbc0.js  (+287 more)
.cargo/: config.toml
.github/workflows/: publish.yaml
analysis/: gpu_timing_analysis.md  walkthrough.md
assets/: Debugger-40750fff.js  Debugger-4920deae.js  Debugger-9ecdb39f.js  Debugger-BBUlHvS6.js  Debugger-CbzTf70w.js  Debugger-D8oaVLOg.js  Debugger-DE12Coq8.js  Debugger-DQirF20z.js  Debugger-DYEr5Kxd.js  Debugger-X9uk3kQU.js  Debugger-b7d8c373.js  Debugger.46fc3a16.js  Debugger.887a3810.js  Debugger.aee0c1f1.js  Debugger.ce11f659.js  FullscreenLoader-Di4EQQWP.js  Play-25473998.js  Play-348979e5.js  Play-609dde18.js  Play-7bSy_iT2.js  Play-BoMe5-1R.js  Play-CA72HBfU.js  Play-DBhCt3Wn.js  Play-DE1BqRN4.js  Play-DHLyJxn1.js  Play-c711c0b7.js  Play-t42l4a7a.js  Play.388ac168.js  Play.49a35a43.js  Play.7d160a82.js  Play.dcb758c3.js  TestResults-55bf4755.js  TestResults-BnYnFWB3.js  TestResults-BwXRJOrE.js  TestResults-CI-ibBUU.js  TestResults-C_b0LFEK.js  TestResults-CxSzIkmR.js  TestResults-DT3tOuXD.js  TestResults-d8d1e358.js  TestResults-ea7ee958.js  (+110 more)
browser/: FontPreloadPlugin.js  main.tsx  types.ts  typings.d.ts
browser/assets/styles/: main.css
browser/components/: AppRouter.tsx  BackButton.tsx  Debugger.tsx  Landing.tsx  Root.tsx  Standalone.tsx
browser/components/common/: FullscreenLoader.tsx
browser/components/gameboy/: Display.tsx  GameBoy.styled.ts  GameBoy.tsx  Zoom.tsx
browser/components/pages/: Debugger.tsx  Landing.tsx  Play.tsx  TestResults.tsx
browser/components/play/: BackButton.tsx  Cartridges.tsx  FpsCounter.tsx  UploadButton.tsx
browser/context/: InputContext.tsx
browser/hooks/: useInput.ts  useInputHandler.ts  useTheme.tsx  useWasmModule.ts
browser/utils/: audio.ts  std.ts
debugger/: Cargo.toml
debugger-web/: Cargo.toml
debugger-web/src/: lib.rs  roms.rs
debugger/src/: app.rs  canvas.rs  lib.rs  main.rs  opcodes.rs  ui_extensions.rs  utils.rs
debugger/src/components/: cpu.rs  disassembly.rs  display.rs  frame_history.rs  joypad.rs  maps.rs  memory_viewer.rs  mod.rs  ppu.rs  roms.rs  scale.rs  tiles.rs
desktop/: Cargo.toml
desktop/src/: audio.rs  main.rs
docs/results/: results-mooneyes.md  results-scribbl.md  results.md
feather-gb/assets/: Debugger.63397a4c.js  Play.ef0f58b1.js  TestResults.d42854ff.js  debugger_web.b53f7260.js  debugger_web_bg.61223652.wasm  gb_web.7215b837.js  index.0bbe1356.js  index.45627931.css  romsList.f1982860.js
gb/: Cargo.toml
gb-web/: Cargo.toml
gb-web/src/: audio.rs  lib.rs
gb/src/: audio.rs  bios.rs  constants.rs  dma.rs  emulator.rs  events.rs  hdma.rs  interrupts.rs  joypad.rs  lib.rs  serial.rs  timer.rs  traits.rs  utils.rs  wram.rs
gb/src/apu/: apu.rs  channel1.rs  channel2.rs  channel3.rs  channel4.rs  frame_sequencer.rs  frequency_timer.rs  length_counter.rs  mod.rs  registers.rs  sweep.rs  volume_envelope.rs  wave_duty.rs
gb/src/cartridges/: cartridge.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  rom_only.rs
gb/src/cpu/: cpu.rs  execute.rs  instructions.rs  mod.rs
gb/src/ppu/: fetcher.rs  mod.rs  oam.rs  palettes.rs  ppu.rs  registers.rs  screen_buffer.rs  utils.rs  vram.rs
gb/tests/: ppu_test.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs  markdown.rs  tests.rs  utils.rs
integration-tests/src/suites/: acid2_tests.rs  age_tests.rs  blarggs_sound_tests.rs  blarggs_tests.rs  mbc3_tester.rs  mealybug_tearoom_tests.rs  mod.rs  mooneye_tests.rs  scribbl_tests.rs  turtle_tests.rs  wilbertpol_tests.rs
roms/demos/: CI5.gbc
roms/wilbertpol-tests/gpu/: hblank_ly_scx_timing-C.sym  hblank_ly_scx_timing-GS.sym  hblank_ly_scx_timing_nops.sym  hblank_ly_scx_timing_variant_nops.sym  intr_0_timing.gb  intr_0_timing.sym  intr_1_2_timing-GS.sym  intr_1_timing.gb  intr_1_timing.sym  intr_2_0_timing.sym  intr_2_mode0_scx1_timing_nops.sym  intr_2_mode0_scx2_timing_nops.sym  intr_2_mode0_scx3_timing_nops.sym  intr_2_mode0_scx4_timing_nops.gb  intr_2_mode0_scx4_timing_nops.sym  intr_2_mode0_scx5_timing_nops.gb  intr_2_mode0_scx5_timing_nops.sym  intr_2_mode0_scx6_timing_nops.gb  intr_2_mode0_scx6_timing_nops.sym  intr_2_mode0_scx7_timing_nops.sym  intr_2_mode0_scx8_timing_nops.gb  intr_2_mode0_scx8_timing_nops.sym  intr_2_mode0_timing.sym  intr_2_mode0_timing_sprites.sym  intr_2_mode0_timing_sprites_nops.gb  intr_2_mode0_timing_sprites_nops.sym  intr_2_mode0_timing_sprites_scx1_nops.sym  intr_2_mode0_timing_sprites_scx2_nops.sym  intr_2_mode0_timing_sprites_scx3_nops.gb  intr_2_mode0_timing_sprites_scx3_nops.sym  intr_2_mode0_timing_sprites_scx4_nops.sym  intr_2_mode3_timing.gb  intr_2_mode3_timing.sym  intr_2_oam_ok_timing.gb  intr_2_oam_ok_timing.sym  intr_2_timing.gb  intr_2_timing.sym  lcdon_mode_timing.gb  lcdon_mode_timing.sym  ly00_01_mode0_2.sym  (+44 more)
