[package]
name = "debugger-web"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <vojtasek.tomas@seznam.cz>"]
repository = "https://github.com/vojty/feather-gb"
description = "Just another GameBoy emulator written in Rust 游"
license = "UNLICENSED"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
debugger = { path = "../debugger" }
eframe = "0.29.1"
env_logger = "0.11.1"
js-sys = "0.3.68"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.41"

[dependencies.web-sys]
version = "0.3.68"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
