[package]
name = "debugger-web"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <vojtasek.tomas@seznam.cz>"]
repository = "https://github.com/vojty/feather-gb"
description = "Just another GameBoy emulator written in Rust 游"
license = "UNLICENSED"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
debugger = { path = "../debugger" }
eframe = "0.29.1"
env_logger = "0.11.5"
js-sys = "0.3.72"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.45"

[dependencies.web-sys]
version = "0.3.72"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
