[package]
name = "debugger"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <tomas.vojtasek@tipsport.cz>"]
repository = "https://github.com/vojty/feather-gb"
description = "Just another GameBoy emulator written in Rust 游"
license = "UNLICENSED"
edition = "2018"


[dependencies]
log = "0.4.14"
gb = { path = "../gb" }
env_logger = "0.8.3"
globwalk = "0.8.1"
fuzzy-matcher = "0.3.7"
eframe = "0.11.0" # Gives us egui, epi and web+native backends
regex = "1.4.3"
size_format="1.0.2"