[package]
name = "debugger"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <vojtasek.tomas@seznam.cz>"]
repository = "https://github.com/vojty/feather-gb"
description = "Just another GameBoy emulator written in Rust 游"
license = "UNLICENSED"
edition = "2021"


[dependencies]
log = "0.4.25"
gb = { path = "../gb" }
env_logger = "0.11.6"
globwalk = "0.9.1"
fuzzy-matcher = "0.3.7"
eframe = "0.31.0"
regex = "1.11.1"
size_format = "1.0.2"
