[package]
name = "gb-web"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <tomas.vojtasek@tipsport.cz>"]
repository = "https://github.com/vojty/feather-gb"
description = "Just another GameBoy emulator written in Rust 游"
license = "UNLICENSED"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gb = { path = "../gb" }

console_error_panic_hook = "0.1.6"
log = "0.4.14"
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
wasm-logger = "0.2.0"

