[package]
name = "gb-web"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <vojtasek.tomas@seznam.cz>"]
repository = "https://github.com/vojty/feather-gb"
description = "Just another GameBoy emulator written in Rust 游"
license = "UNLICENSED"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gb = { path = "../gb" }

console_error_panic_hook = "0.1.7"
log = "0.4.22"
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
wasm-logger = "0.2.0"
