[package]
name = "gb"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <vojtasek.tomas@seznam.cz>"]
repository = "https://github.com/vojty/feather-gb"
description = "Just another GameBoy emulator written in Rust 游"
license = "UNLICENSED"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gb"
path = "src/lib.rs"

[dependencies]
arrayvec = "0.7.2"
bitflags = "2.2.1"
log = "0.4.17"
parse-display = "0.8.0"