[package]
name = "gb"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <vojtasek.tomas@seznam.cz>"]
repository = "https://github.com/vojty/feather-gb"
description = "Just another GameBoy emulator written in Rust 游"
license = "UNLICENSED"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gb"
path = "src/lib.rs"

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.6.0"
log = "0.4.22"
parse-display = "0.10.0"
